:sparkles: Implement tournament endpoints
