# src/main/kotlin/fr/sdecout/repository/domain/api/UpsertTournament.kt
@@ -1,0 +1,9 @@
+package fr.sdecout.repository.domain.api
+
+import fr.sdecout.repository.domain.core.tournament.Tournament
+
+fun interface UpsertTournament {
+    fun upsert(tournament: Tournament)
+
+    operator fun invoke(tournament: Tournament) = upsert(tournament)
+}
